Fix z-index of header to overlay zoom control of leaflet map

--- a/src/MainScreen/Header.module.css
+++ b/src/MainScreen/Header.module.css
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 1001;
 
   height: 11rem;
   width: 100%;
